--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "rsuite": "^5.16.4",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
