--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "noUnusedLocals": false,
     "jsx": "preserve"
   },
   "include": [
