--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "eject": "node ｓnode_modules/react-scripts/bin/react-scripts.js eject"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^15.0.0",
     "@testing-library/jest-dom": "file:../node_modules/@testing-library/jest-dom",
     "@testing-library/react": "file:../node_modules/@testing-library/react",
     "@testing-library/user-event": "file:../node_modules/@testing-library/user-event",
     "@types/jest": "file:../node_modules/@types/jest",
     "@types/node": "file:../node_modules/@types/node",
     "@types/react": "file:../node_modules/@types/react",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "file:../node_modules/@types/react-dom",
     "gantt-task-react": "file:../../gantt-task-react",
     "postcss-preset-env": "file:../node_modules/postcss-preset-env",
