--- a/package.json
+++ b/package.json
@@ -11,16 +11,13 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^15.0.0",
-    "@testing-library/jest-dom": "file:../node_modules/@testing-library/jest-dom",
-    "@testing-library/react": "file:../node_modules/@testing-library/react",
-    "@testing-library/user-event": "file:../node_modules/@testing-library/user-event",
-    "@types/jest": "file:../node_modules/@types/jest",
-    "@types/node": "file:../node_modules/@types/node",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^15.0.1",
     "@types/react": "file:../node_modules/@types/react",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "file:../node_modules/@types/react-dom",
     "gantt-task-react": "file:../../gantt-task-react",
-    "postcss-preset-env": "file:../node_modules/postcss-preset-env",
+    "postcss-preset-env": "^7.6.0",
     "react": "file:../node_modules/react",
     "react-dom": "file:../node_modules/react-dom",
     "react-icons": "^4.4.0",
