--- a/package.json
+++ b/package.json
@@ -7,22 +7,24 @@
     "start": "node node_modules/react-scripts/bin/react-scripts.js start",
     "build": "node node_modules/react-scripts/bin/react-scripts.js build",
     "test": "node node_modules/react-scripts/bin/react-scripts.js test",
-    "eject": "node ｓnode_modules/react-scripts/bin/react-scripts.js eject"
+    "eject": "node node_modules/react-scripts/bin/react-scripts.js eject"
   },
   "dependencies": {
     "@hello-pangea/dnd": "^15.0.0",
     "@types/jest": "^27.5.1",
     "@types/node": "^15.0.1",
-    "@types/react": "file:../node_modules/@types/react",
+    "@types/react": "^18.0.5",
     "@types/react-beautiful-dnd": "^13.1.2",
-    "@types/react-dom": "file:../node_modules/@types/react-dom",
-    "gantt-task-react": "file:../../gantt-task-react",
+    "@types/react-dom": "^18.0.5",
+    "gantt-task-react": "file:gantt-task-react",
     "postcss-preset-env": "^7.6.0",
-    "react": "file:../node_modules/react",
-    "react-dom": "file:../node_modules/react-dom",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "react-scripts": "file:../node_modules/react-scripts",
-    "rsuite": "^5.16.4"
+    "rsuite": "^5.19.0"
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   },
   "browserslist": {
     "production": [
