GitHubページ　検証用

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gantt-task-react-example",
-  "homepage": ".",
+  "homepage": "https://nkita.github.io/ganttc/",
   "version": "0.0.0",
   "private": true,
   "scripts": {
