--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easy_gantt_chart",
-  "homepage": "https://www.nkitao.com/ganttc",
+  "homepage": "https://www.nkitao.com/ganttc/",
   "version": "0.0.0",
   "private": true,
   "scripts": {
