--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "rsuite": "^5.19.0"
+    "rsuite": "^5.19.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "react-scripts": "^5.0.1"
   },
   "browserslist": {
